force-app/main/default/objects/Contact_Normalized_Title__c/Contact_Normalized_Title__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will automate the Function and Level picklist population based on Normalized Title field on Contact</description>
    <label>Contact Normalized Title</label>
</CustomObject>