force-app/main/default/objects/Contact_Normalized_Title__c/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <label>Compliance</label>
    <type>TextArea</type>
</CustomField>