force-app/main/default/objects/Contact_Normalized_Title__c/fields/Executive__c.field-meta.xml
<CustomField>
    <fullName>Executive__c</fullName>
    <label>Executive</label>
    <type>TextArea</type>
</CustomField>