force-app/main/default/objects/Contact_Normalized_Title__c/fields/IT__c.field-meta.xml
<CustomField>
    <fullName>IT__c</fullName>
    <label>IT</label>
    <type>TextArea</type>
</CustomField>